<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Imagen y Texto</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="imagen_ejemplo">Imagen de ejemplo</string>
    <string name="negrita">Negrita</string>
    <string name="settext">SetText</string>
    <string name="usuario">Usuario</string>
    <string name="escribe_algo">Escribe algo:</string>
    <string name="comprobar">Comprobar</string>

</resources>
