<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView android:id="@+id/LblEtiqueta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/escribe_algo"
        android:background="#ff1ca5ff"
        android:typeface="monospace"/>

    <EditText android:id="@+id/TxtBasico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_below="@id/LblEtiqueta" />

    <EditText android:id="@+id/TxtImagenHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_usuario"
        android:hint="@string/usuario"
        android:textColorHint="#CFCFCF"
        android:inputType="text"
        android:layout_below="@id/TxtBasico" />

    <Button android:id="@+id/BtnNegrita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/TxtImagenHint"
        android:layout_alignParentRight="true"
        android:text="@string/negrita" />

    <Button android:id="@+id/BtnSetText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/TxtImagenHint"
        android:layout_toLeftOf="@id/BtnNegrita"
        android:text="@string/settext" />

    <android.support.design.widget.TextInputLayout
    android:id="@+id/TiLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/BtnSetText" >

    <EditText android:id="@+id/TxtInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Escribe un número par" />

</android.support.design.widget.TextInputLayout>

    <Button android:id="@+id/BtnInputLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/TiLayout"
        android:layout_alignParentRight="true"
        android:text="@string/comprobar" />

    <ImageView android:id="@+id/ImgFoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher"
        android:layout_below="@id/BtnInputLayout"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/imagen_ejemplo" />

</RelativeLayout>
